# aider-mcp-client

./: MANIFEST.in  README.md  setup.py
.github/workflows/: ci.yml
aider_mcp_client/: README.md  __init__.py  __main__.py  _version.py  client.py  config.json  mcp_sdk_client.py  pyproject.toml  setup.cfg  test_connection.sh
example/: mcp_test.py
mcp_client/: .gitignore  pyproject.toml  setup.cfg
mcp_client/mcp_client/: client.py  config.json
mcp_client/tests/: test_client.py
tests/: conftest.py  test_client.py  test_example.py  test_helpers.py  test_mcp_sdk.py
