[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_client"
version = "0.1.0"
description = "A Python client for interacting with MCP (Model Control Protocol) servers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alvin Veroy", email = "me@alvin.tech"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
mcp-client = "mcp_client.client:main"

[project.urls]
Homepage = "https://github.com/alvinveroy/mcp_client"
