[metadata]
name = mcp_client
version = 0.1.0
description = A Python client for interacting with MCP (Model Control Protocol) servers
long_description = file: README.md
long_description_content_type = text/markdown
author = Alvin Veroy
author_email = me@alvin.tech
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
project_urls =
    Homepage = https://github.com/alvinveroy/mcp_client

[options]
python_requires = >=3.8
install_requires =
    requests>=2.25.0
packages = find:

[options.entry_points]
console_scripts =
    aider-mcp-client = mcp_client.client:main
